--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ html, body {
 
 .link {
     position: relative;
-    background-color: #189ad3;
+    background-color: #f2f2f2;
     color: #005073;
     border: solid #005073 2px;
     border-radius: 10px;
