--- a/style.css
+++ b/style.css
@@ -96,3 +96,21 @@ html, body {
     color: rgba(0, 0, 0, 0.5);
 }
 
+details > summary {
+  padding: 4px;
+  width: 200px;
+  background-color: #f2f2f2;
+  color: #005073;
+  border: none;
+  box-shadow: 1px 1px 2px #bbbbbb;
+  cursor: pointer;
+}
+
+details > p {
+  background-color: #f2f2f2;
+  color: #005073;
+  padding: 4px;
+  text-align: center;
+  margin: 0;
+  box-shadow: 1px 1px 2px #bbbbbb;
+}
