--- a/style.css
+++ b/style.css
@@ -104,6 +104,8 @@ details > summary {
   border: none;
   box-shadow: 1px 1px 2px #bbbbbb;
   cursor: pointer;
+  margin: auto;
+  text-align: center;
 }
 
 details > p {
