--- a/style.css
+++ b/style.css
@@ -97,15 +97,19 @@ html, body {
 }
 
 details > summary {
-  padding: 4px;
-  width: 200px;
-  background-color: #f2f2f2;
-  color: #005073;
-  border: none;
-  box-shadow: 1px 1px 2px #bbbbbb;
-  cursor: pointer;
-  margin: auto;
-  text-align: center;
+  position: relative;
+background-color: #f2f2f2;
+color: #005073;
+border: solid #005073 2px;
+border-radius: 10px;
+font-size: 1rem;
+text-align: center;
+display: block;
+margin-left: 10px;
+margin-right: 10px;
+margin-bottom: 10px;
+padding: 10px;
+text-decoration: none;
 }
 
 details > p {
