--- a/style.css
+++ b/style.css
@@ -113,10 +113,17 @@ text-decoration: none;
 }
 
 details > p {
-  background-color: #f2f2f2;
-  color: #005073;
-  padding: 4px;
-  text-align: center;
-  margin: 0;
-  box-shadow: 1px 1px 2px #bbbbbb;
+  position: relative;
+background-color: #d9d9d9;
+color: #005073;
+border: solid #005073 2px;
+border-radius: 10px;
+font-size: 1rem;
+text-align: center;
+display: block;
+margin-left: 10px;
+margin-right: 10px;
+margin-bottom: 10px;
+padding: 10px;
+text-decoration: none;
 }
