--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ html, body {
         color: #000; /* Fallback for older browsers */
         color: rgba(0, 0, 0, 0.5);
     }
+    
+    details > summary:hover {
+        background-color: var(--accentColor);
+        color: #000; /* Fallback for older browsers */
+        color: rgba(0, 0, 0, 0.5);
+    }
 }
 
 .link:active {
@@ -111,6 +117,12 @@ margin-bottom: 10px;
 padding: 10px;
 text-decoration: none;
 cursor: pointer;
+}
+
+details > summary:active {
+    background-color: var(--accentColor);
+    color: #000; /* Fallback for older browsers */
+    color: rgba(0, 0, 0, 0.5);
 }
 
 details > p {
